--- a/site/styles/custom.less
+++ b/site/styles/custom.less
@@ -1,11 +1,25 @@
+// vARIABLES
+
+@spaceBetweenNavItems: .7em;
+@navItemsHeight: .75em;
+@navButtonPaddingVertical: 1em;
+@navButtonPaddingHorizontal: 1.5em;
+@navButtonLeftMargin: 1em;
+@bodyButtonPaddingVertical: 1em;
+@bodyButtonPaddingHorizontal: 1.5em;
+@subnavPaddingVertical: 1em;
+@subnavPaddingHorizontal: 1.5em;
+@accentColor: #ebc713;
 
 
-/* Header and nav stuff */
+// Fixed header
 
 #header {
   position: fixed;
   opacity: .8;
 }
+
+// Header width
 
 @media only screen and (min-width: 640px) and (max-width: 1020px) {
   #header {
@@ -23,3 +37,42 @@
     // -moz-box-sizing: border-box;
       //    box-sizing: border-box;
 }
+
+// underline nav elements upon hover
+
+#mainNavigation {
+  .collection:not(:last-child):hover {
+  //text-decoration: underline;
+  //border-bottom: .5px solid @navActiveColor;
+  //border-color: #ebc713;
+  }
+}
+
+
+// adjust padding of nav items
+
+body:not(.force-mobile-nav) {
+  .nav-wrapper {
+    nav > div {
+      > a, label, {
+                  padding: @navItemsHeight @spaceBetweenNavItems;
+                }
+    }      
+  }
+}
+
+// adjust padding of nav button
+
+.enable-nav-button #headerNav nav>div:not(.folder):last-child a, .enable-nav-button #sidecarNav nav>div:not(.folder):last-child a {
+    padding:  @navButtonPaddingVertical @navButtonPaddingHorizontal !important;
+  }
+
+// adjust left margin of nav button
+
+.enable-nav-button #headerNav nav>div:not(.folder):last-child a {
+  margin-left: @spaceBetweenNavItems;
+}
+
+
+
+
