--- a/site/styles/base.less
+++ b/site/styles/base.less
@@ -401,9 +401,9 @@ blockquote {
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 
-
+/*
   -webkit-animation: header-anim 1s ease-in-out;
-  animation: header-anim 1s ease-in-out;
+  animation: header-anim 1s ease-in-out; */
 }
 .footer-inner{
   padding: (@sitePadding * 2) @sitePadding;
@@ -1239,16 +1239,20 @@ body:not(.collection-type-gallery).banner-button-corner-style-pill {
 }
 
 // folder indicator everywhere in mobile style nav
-#sidecarNav .folder label:before {
+
+// LEVL3 commented out the section below
+
+/* #sidecarNav .folder label:before {
   content: '+';
   padding-right: 0.25em;
   width: 0.75em;
   display: inline-block;
-}
+} 
 
 #sidecarNav .folder .folder-toggle-box:checked ~ label:before {
   content:'–'
 }
+*/
 
 // Folders on mobile
 .touch-styles {
