created folder page layout without sub-nav menu

--- a/site/styles/custom_tweaks.less
+++ b/site/styles/custom_tweaks.less
@@ -45,3 +45,5 @@
 // tweak: { "type" : "value" , "title" : "Subnav Horizontal Padding" , "min" : "0" , "max" : "3" , "category" : "Tweaks added by LEVL3design" }
 @subnavPaddingHorizontal: 1.5em;
 
+// tweak: { "type" : "color" , "title" : "Color of social buttons" , "category" : "Tweaks added by LEVL3design" }
+@socialButtonColor: #c5b358;
