--- a/site/styles/custom.less
+++ b/site/styles/custom.less
@@ -11,6 +11,7 @@
 @subnavPaddingHorizontal: 1.5em;
 @accentColor: #ebc713;
 @navUnderlineColor: #c5b358;
+@socialButtonColor: #c5b358;
 
 
 // HEADER STUFF ----------------------------- //
@@ -116,5 +117,10 @@ html:not(.touch-styles) body:not(.force-mobile-nav) .nav-wrapper .folder .subnav
   color: @navActiveColor;
 }
 
+// Social icon color
+
+.social-icons-style-solid.social-icons-color-black .sqs-use--mask {
+  fill: @socialButtonColor;
+}
 
 
