revealed image in blog.list; added a couple tweaks

--- a/site/styles/custom.less
+++ b/site/styles/custom.less
@@ -13,6 +13,11 @@
 @navUnderlineColor: #c5b358;
 @socialButtonColor: #c5b358;
 @folderNavTitleFontMobile: 23px;
+//@accentColor: #98883a;
+@navUnderlineColor: #c5b358;
+@socialButtonColor: #98883a;
+@folderNavTitleFontMobile: 23px;
+@commentButtonColor: #98883a;
 
 
 // HEADER STUFF ----------------------------- //
@@ -203,6 +208,26 @@ li.page-collection:hover {
     color: #000 !important;
 }
 */
+
+
+// Reveal and style photos in blog list
+
+.view-list .excerpt-thumb {
+    display: block;
+    height: 40vh;
+    width: 100%;
+    margin: 0 1em 2em 0;
+    float: none;
+    overflow: hidden;
+}
+
+// Change color of blog comment button
+
+.squarespace-comments .comment-btn {
+    background-color: @commentButtonColor !important;
+}
+
+
 
 
 
