--- a/site/styles/custom_tweaks.less
+++ b/site/styles/custom_tweaks.less
@@ -45,8 +45,16 @@
 // tweak: { "type" : "value" , "title" : "Subnav Horizontal Padding" , "min" : "0" , "max" : "3" , "category" : "Tweaks added by LEVL3design" }
 @subnavPaddingHorizontal: 1.5em;
 
-// tweak: { "type" : "color" , "title" : "Color of social buttons" , "category" : "Tweaks added by LEVL3design" }
-@socialButtonColor: #c5b358;
 
 // tweak: { "type" : "value" , "title" : "Folder Nav Title Font Mobile" , "min" : "0" , "max" : "40" , "category" : "Tweaks added by LEVL3design" }
 @folderNavTitleFontMobile: 23px;
+
+
+// tweak: { "type" : "color" , "title" : "color of blog comment button" , "category" : "Tweaks added by LEVL3design" }
+@commentButtonColor: #98883a;
+
+
+// tweak: { "type" : "color" , "title" : "color of social buttons" , "category" : "Tweaks added by LEVL3design" }
+@socialButtonColor: #98883a;
+
+
