--- a/site/styles/custom_tweaks.less
+++ b/site/styles/custom_tweaks.less
@@ -58,3 +58,7 @@
 @socialButtonColor: #98883a;
 
 
+// tweak: { "type" : "color" , "title" : "sidebar button color" , "category" : "Tweaks added by LEVL3design" }
+@sidebarButtonColor: #98883a;
+
+
